--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Check Your Car</h1>
         <div class="container">
             <h3>Login</h3>
-            <form>
+            <form method="post" action="login/process_login.php">
                 <div class="row d-flex justify-content-center">
                     <div class="col-6">
                         <div class="form-group">
