--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <div class="row d-flex justify-content-center">
                     <div class="col-6">
                         <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            <label for="email">Email address</label>
+                            <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp">
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                         </div>
                     </div>
@@ -28,12 +28,13 @@
                 <div class="row d-flex justify-content-center">
                     <div class="col-6">
                         <div class="form-group">
-                            <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1">
+                            <label for="password">Password</label>
+                            <input type="password" class="form-control" id="password">
                         </div>
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
+                <a href="views/register.php" class="btn btn-primary">Register</a>
             </form>
         </div>
     </div>
