Removing register php file and associated link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <a href="views/register.php" class="btn btn-primary">Register</a>
+                <a href="views/register.html" class="btn btn-primary">Register</a>
             </form>
         </div>
     </div>
